[fixed layout issue]

--- a/components/carousel/carousel.scss
+++ b/components/carousel/carousel.scss
@@ -1,12 +1,13 @@
 .control-arrow {
     position: absolute;
-    top: 87% !important;
+    top: 100% !important;
     background: none;
     z-index: 999 !important;
     border: 0;
     border-radius: 100%;
     padding: .2rem 1rem !important;
     height: fit-content !important;
+    transform: translate(0, -125%);
     border: 5px double var(--mainBorderColor) !important;
     background-color: var(--mainLinkColor) !important;
 }
